adding some fun links

--- a/docs/Topics/03-PC.md
+++ b/docs/Topics/03-PC.md
@@ -4,3 +4,6 @@
 - `reboot`
 - `lshw`
 - `uname`
+
+Current news:
+[DDR5 from AMD - PC Gamer](https://www.pcgamer.com/hardware/memory/amd-wants-to-patent-a-new-ddr5-memory-standard-with-double-the-bandwidth-but-were-not-expecting-to-see-it-in-pcs-any-time-soon/)
